# src/modules/auth/auth.routes.ts
@@ -5,5 +5,6 @@ const router = Router();
 
 router.post("/register", AuthController.register);
 router.post("/login", AuthController.login);
-
+router.post('/forget-password',AuthController.forgetPassword);
+router.post('/reset-password',AuthController.resetPassword);
 export default router;
